--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-"author": "Jane Doe",
+{
+  "name": "fcc-learn-npm-package-json",
+  "author": "foobar",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "8.11.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Gitmarvsthemartian/backend/edit/main/package.json"
+  }
+}
